# externalexamplebase

./: .gitignore  README.md  buildandrun.bat  cmake-build.bat  ndk-build.bat
.github/workflows/: ndk-build.yml
dump/: 0.39.1 api.txt
jni/: Android.mk  Application.mk  CMakeLists.txt
jni/src/: main.cpp
jni/src/Android_draw/: draw.cpp  draw.h
jni/src/Android_touch/: Touch.cpp  Touch.hpp
jni/src/esp/: esp.cpp  esp.h
jni/src/func/: visuals.cpp
jni/src/game/: game.hpp  math.hpp
jni/src/memory/: memory.cpp  memory.h  read.cpp  read.h  write.cpp  write.h
jni/src/menu/: menu.cpp  menu.h
jni/src/native_surface/: ANativeWindowCreator.h
jni/src/other/: memory.hpp  string.h  vector3.h
jni/src/protect/: oxorany.hpp
jni/src/sdk/: offsets.hpp  sdk.cpp  sdk.hpp
jni/src/watermark/: watermark.cpp  watermark.h
reference/src/: main.cpp
reference/src/func/: visuals.cpp
reference/src/game/: game.hpp  game.hpp.bak  player.hpp
reference/src/other/: string.h
reference/src/ui/: menu.cpp  menu.cpp.bak
